set right size, fix overflow and improve mobile placement

--- a/assets/less/responsive/mobile/views/profile.less
+++ b/assets/less/responsive/mobile/views/profile.less
@@ -15,6 +15,7 @@
 					width: 65%;
 					float: left;
 					.box-fix;
+					text-align: left;
 				}
 				.trustlevel {
 					width: 35%;
