--- a/assets/less/views/profile.less
+++ b/assets/less/views/profile.less
@@ -25,13 +25,14 @@
 			.box-fix;
 			heading {
 				h1 {
-					// Awesome features for webkit-browsers!
-					background: -webkit-linear-gradient(@primaryLighter, @primary);
-					-webkit-background-clip: text;
-					-webkit-text-fill-color: transparent;
+					// set a proper text-size
+					.large-text();
+					// set correct overflow
+					height: @line-height;
+					overflow: hidden;
+					white-space: nowrap;
+					text-overflow: ellipsis;
 					color: lighten(@primary, 5%);
-					//text-shadow: 1px 1px 1px @green2;
-					text-rendering: optimizeLegibility;
 				}
 				_:-o-prefocus, h3 {
 					background: none;
